feat: add universal Java support (8+) via JNI and update deployment guide